<resources>
    <string name="app_name">Formulario de Registro</string>
    <string name="formulario">FORMULARIO</string>
    <string name="nombre">Nombre: </string>
    <string name="correo">Correo Electronico</string>
    <string name="documento">Numero de Documento</string>
    <string name="guardar">GUARDAR</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="cine">Cine</string>
    <string name="nadar">Nadar</string>
    <string name="futbol">Leer</string>
    <string name="leer">Leer</string>
    <string name="series">Series</string>
    <string name="password">Password</string>
    <string name="password2">Repeat Password</string>
    <string name="pick_date">Fecha de Nacimiento</string>
    <string name="ciudad">Ciudad de Nacimiento</string>

    <string-array name="cityOptions">
        <item> </item>
        <item>Medellin</item>
        <item>Envigado</item>
        <item>La Ceja</item>
        <item>Sabaneta</item>
    </string-array>

</resources>
