<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TituloApp"
                android:text="@string/formulario"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/nombre"
                          android:textSize="16sp"
                          android:textColor="@color/black"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etNombre"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/password"
                          android:textSize="16sp"
                          android:textColor="@color/black"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etPassword"
                          android:password="true"
                />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/password2"
                          android:textSize="16sp"
                          android:textColor="@color/black"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etPassword2"
                          android:password="true"
                />
        </LinearLayout>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etCorreo"
                  android:inputType="textEmailAddress"
                  android:hint="@string/correo"/>

        <RadioGroup android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <RadioButton android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:id="@+id/rbMasculino"
                             android:layout_weight="1"
                             android:text="@string/masculino"
                             android:onClick="onRadioButtonClicked" />

                <RadioButton android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:id="@+id/rbFemenino"
                             android:layout_weight="1"
                             android:text="@string/femenino"
                             android:onClick="onRadioButtonClicked" />
        </RadioGroup>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
                <CheckBox android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/cbCine"
                          android:text="@string/cine"
                          android:onClick="onCheckBoxClicked"/>

                <CheckBox android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/cbNadar"
                          android:text="@string/nadar"
                          android:onClick="onCheckBoxClicked"/>

                <CheckBox android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/cbLeer"
                          android:text="@string/leer"
                          android:onClick="onCheckBoxClicked"/>

                <CheckBox android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/cbSeries"
                          android:text="@string/series"
                          android:onClick="onCheckBoxClicked"/>


        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/bnFecha"
                        android:text="@string/pick_date"
                        android:onClick="showDatePickerDialog" />

                <TextView android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/txNacimiento"
                          android:gravity="center"
                          android:textSize="25dp"

                />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/txciudad"
                          android:text="@string/ciudad"
                          android:gravity="center"
                />

                <Spinner  android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:id="@+id/spCiudad"
                />


        </LinearLayout>


        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/bnguardar"
                android:textAllCaps="false"
                android:textSize="20sp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/txResultado"
                  android:textSize="20sp"
                  android:textColor="@color/red"
                  android:text=""/>

</LinearLayout>

